--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "axios": "^0.19.2",
         "babel-plugin-react-css-modules": "^5.2.6",
         "classnames": "^2.2.6",
         "react": "^16.13.1",
         "react-css-modules": "^4.7.11",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1"
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "3.4.1",
+        "redux": "^4.0.5",
+        "redux-logger": "^3.0.6"
     },
     "scripts": {
         "start": "react-scripts start",
