--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "apexcharts": "^3.19.3",
         "axios": "^0.19.2",
         "babel-plugin-react-css-modules": "^5.2.6",
+        "chart.js": "^2.9.3",
         "classnames": "^2.2.6",
         "react": "^16.13.1",
         "react-apexcharts": "^1.3.7",
