--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-css-modules": "^4.7.11",
         "react-dom": "^16.13.1",
         "react-horizontal-timeline": "^1.5.3",
+        "react-rating-stars-component": "^2.2.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
